# slate

./: README.md  cspell.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  release.yml  test.yml
docs/source/: conf.py  index.rst
examples/: cache.py  linalg.py  plot.py  temp.py  transpose.py
slate/: __init__.py
slate/_einsum/: __init__.py  _einstein_basis.py  _einstein_index.py  _einsum.py
slate/array/: __init__.py  _array.py  _conversion.py  _misc.py  _stats.py  _transpose.py  _util.py  array.py  conversion.py  util.py
slate/basis/: __init__.py  _basis.py  _basis_state_metadata.py  _block_diagonal.py  _coordinate.py  _cropped.py  _diagonal.py  _fundamental.py  _isotropic.py  _recast.py  _split.py  _transformed.py  _truncated.py  _tuple.py  _util.py  _wrapped.py  basis.py  co_basis.py  coordinate.py  cropped.py  evenly_spaced.py  fundamental.py  metadata.py  recast.py  split.py  transformed.py  truncated.py  tuple_basis.py  wrapped.py
slate/explicit_basis/: __init__.py  _block_diagonal.py  _diagonal.py  _explicit_basis.py
slate/linalg/: __init__.py  _eig.py  _einstein_index.py  _einsum.py  _misc.py
slate/metadata/: __init__.py  _metadata.py  _shape.py  _stacked.py  length.py  stacked.py  util.py
slate/plot/: __init__.py  _animate.py  _distribution.py  _plot.py  _squared_scale.py  _util.py  animate.py  plot.py
slate/util/: __init__.py  _decorators.py  _diagonal.py  _index.py  _pad.py  _util.py  util.py
slate_core/: __init__.py  transform.py
slate_core/_einsum/: __init__.py  _einstein_basis.py  _einstein_index.py  _einsum.py
slate_core/array/: __init__.py  _array.py  _conversion.py  _misc.py  _stats.py  _transpose.py
slate_core/util/: _pad.py  (+6 more)
tests/: basis_test.py  conftest.py  conversion_test.py  ctype_test.py  einsum_test.py  linalg_test.py  metadata_test.py  pad_test.py  slate_array_test.py  split_array_test.py  variance_test.py
(+68 files in other folders)
